Fix layout issue with the choices

--- a/docs/CSS/style.css
+++ b/docs/CSS/style.css
@@ -162,7 +162,7 @@ a {
 }
 
 .choice-container {
-    /* border: solid 1px black; */
+    column-gap: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -174,6 +174,7 @@ a {
 .choice {
     border-radius: 7px;
     display: inline-block;
+    margin-bottom: 25px;
     padding: 10px;
 }
 
